--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "knex": "^0.14.6",
     "mocha": "^5.1.1",
     "morgan": "~1.9.0",
-    "pg": "^7.4.2"
+    "pg": "^7.4.2",
+    "pryjs": "^1.0.3"
   }
 }
